--- a/templates/clients.html
+++ b/templates/clients.html
@@ -72,13 +72,13 @@
 	<!--client section start -->
     <div class="client_section layout_padding">
         <div class="container">
-            <h1 class="about_text">what is say clients</h1>
-            <p class="ipsum_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliq</p>
-            <div class="client_section_2 layout_padding">
-                <h1 class="client_text">Consectetur adipiscing </h1>
-                <p class="ipsum_text_2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim</p>
-                <div class="icon_4"><img src="images/icon-4.png"></div>
-            </div>
+            <h1 class="about_text">what is say users</h1>
+            <p class="ipsum_text">It is best and most accurate web site which I've ever seen</p>
+<!--            <div class="client_section_2 layout_padding">-->
+<!--                <h1 class="client_text">Consectetur adipiscing </h1>-->
+<!--                <p class="ipsum_text_2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim</p>-->
+<!--                <div class="icon_4"><img src="images/icon-4.png"></div>-->
+<!--            </div>-->
         </div>
     </div>
     <!--client section end -->
@@ -88,22 +88,22 @@
 			<div class="footer_main">
 				<div class="input-group mb-3">
                     <input type="text" class="form-control" placeholder="Enter your email" aria-label="Recipient's username" aria-describedby="basic-addon2">
-                    <div class="input-group-append">
-                      <span class="input-group-text" id="basic-addon2">subscribe Now</span>
-                    </div>
+<!--                    <div class="input-group-append">-->
+<!--                      <span class="input-group-text" id="basic-addon2">subscribe Now</span>-->
+<!--                    </div>-->
                 </div>
-                <h1 class="year_text">2020</h1>
-                <h1 class="landing_text">Free Multipurpose Responsive  Landing Page </h1>
+                <h1 class="year_text">2024</h1>
+                <h1 class="landing_text">Created by Camilla Kleymen </h1>
 			</div>
-			<div class="social_icon">
-				<ul>
-					<li><a href="#"><img src="images/fb-icon.png"></a></li>
-					<li><a href="#"><img src="images/twitter-icon.png"></a></li>
-					<li><a href="#"><img src="images/linkdin-icon.png"></a></li>
-					<li><a href="#"><img src="images/instagram-icon.png"></a></li>
-					<li><a href="#"><img src="images/youtub-icon.png"></a></li>
-				</ul>
-			</div>
+<!--			<div class="social_icon">-->
+<!--				<ul>-->
+<!--					<li><a href="#"><img src="images/fb-icon.png"></a></li>-->
+<!--					<li><a href="#"><img src="images/twitter-icon.png"></a></li>-->
+<!--					<li><a href="#"><img src="images/linkdin-icon.png"></a></li>-->
+<!--					<li><a href="#"><img src="images/instagram-icon.png"></a></li>-->
+<!--					<li><a href="#"><img src="images/youtub-icon.png"></a></li>-->
+<!--				</ul>-->
+<!--			</div>-->
 		</div>
 	</div>
 	<!--footer section end -->
@@ -111,9 +111,6 @@
 	<div class="copyright_section">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-12">
-					<p class="copyright_text">2020 All Rights Reserved Design by <a href="https://html.design/"> Free Html Templates</p>
-				</div>
 			</div>
 		</div>
 	</div>
