--- a/templates/news_page.html
+++ b/templates/news_page.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,12 +6,17 @@
     <title>About news </title>
 </head>
 <body>
-Name of news: {{ news.news_title }}<br>
-Description: {{ news.news_description }}<br>
-Country: {{ news.news_country }}<br>
-Date: {{ news.news_date }}<br>
-
-Category: <a href="/category/ {{ news.news_category.id }}">{{ news.news_category.id }}</a>
-<img src = "{{ news.news_image.url }}" alt = "photo">
+    <h1>About News</h1>
+    {% for news in news_list %}
+        <div>
+            <h2>{{ news.title }}</h2>
+            <p>Description: {{ news.description }}</p>
+            <p>Country: {{ news.country }}</p>
+            <p>Date: {{ news.date }}</p>
+            <p>Category: <a href="/category/{{ news.category.id }}">{{ news.category.name }}</a></p>
+            <img src="{{ news.image.url }}" alt="photo">
+        </div>
+        <hr>
+    {% endfor %}
 </body>
 </html>
