--- a/templates/services.html
+++ b/templates/services.html
@@ -10,25 +10,25 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="viewport" content="initial-scale=1, maximum-scale=1">
 <!-- site metas -->
-<title>Services</title>
+<title>ALLNEWS</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">	
 <!-- bootstrap css -->
-<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
 <!-- style css -->
-<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 <!-- Responsive-->
-<link rel="stylesheet" href="css/responsive.css">
+<link rel="stylesheet" href="{% static 'css/responsive.css' %}">
 <!-- fevicon -->
 <link rel="icon" href="images/fevicon.png" type="image/gif" />
 <!-- Scrollbar Custom CSS -->
-<link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
+<link rel="stylesheet" href="{% static 'css/jquery.mCustomScrollbar.min.css' %}">
 <!-- Tweaks for older IEs-->
 <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
 <!-- owl stylesheets --> 
-<link rel="stylesheet" href="css/owl.carousel.min.css">
-<link rel="stylesheet" href="css/owl.theme.default.min.css">
+<link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
+<link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
 
 </head>
@@ -50,7 +50,7 @@
                       <a class="nav-link" href="about.html">ABOUT</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="services.html">SERVICES</a>
+                      <a class="nav-link" href="allnews.html">ALLNEWS</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="index.html">WEB</a>
@@ -61,9 +61,6 @@
                     <li class="nav-item">
                       <a class="nav-link" href="contact.html">CONTACT</a>
                     </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#"><img src="images/search-icon.png"></a>
-                    </li>
                   </ul>
                 </div>
             </nav>
@@ -73,54 +70,71 @@
 	<!--service section start -->
     <div class="service_section layout_padding margin_0">
         <div class="container">
-            <h1 class="about_text">services</h1>
-            <p class="ipsum_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliq</p>
+            <h1 class="about_text">NEWS</h1>
             <div class="service_section_2">
                 <div class="row">
                     <div class="col-sm-12 col-lg-4">
-                        <div class="icon_1"><img src="images/icon-1.png"></div>
-                        <h1 class="website_text">website element</h1>
-                        <p class="dolor_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliq</p>
+                        <h2>{{ news.title }}</h2>
+                        <p>Description: {{ news.description }}</p>
+                        <p>Country: {{ news.country }}</p>
+                        <p>Date: {{ news.date }}</p>
+                        <p>Category: <a href="/category/{{ news.category.id }}">{{ news.category.name }}</a></p>
+                        <img src="{{ news.image.url }}" alt="photo">
                     </div>
                     <div class="col-sm-12 col-lg-4">
-                        <div class="icon_1"><img src="images/icon-2.png"></div>
-                        <h1 class="website_text">applicatinos element</h1>
-                        <p class="dolor_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliq</p>
+                        <h2>{{ news.title }}</h2>
+                        <p>Description: {{ news.description }}</p>
+                        <p>Country: {{ news.country }}</p>
+                        <p>Date: {{ news.date }}</p>
+                        <p>Category: <a href="/category/{{ news.category.id }}">{{ news.category.name }}</a></p>
+                        <img src="{{ news.image.url }}" alt="photo">
                     </div>
                     <div class="col-sm-12 col-lg-4">
-                        <div class="icon_1"><img src="images/icon-3.png"></div>
-                        <h1 class="website_text">design element</h1>
-                        <p class="dolor_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliq</p>
+                        <h2>{{ news.title }}</h2>
+                        <p>Description: {{ news.description }}</p>
+                        <p>Country: {{ news.country }}</p>
+                        <p>Date: {{ news.date }}</p>
+                        <p>Category: <a href="/category/{{ news.category.id }}">{{ news.category.name }}</a></p>
+                        <img src="{{ news.image.url }}" alt="photo">
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <!--service section end -->
+            <div class="contact_section layout_padding">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h1 class="contact_text">Create a new announcement</h1>
+                    <div class="contact_main">
+                        <div class="mail_section">
+                            <form method="post">
+                                 {% csrf_token %}
+                                <input type="text" class="mail_text" placeholder="Title" name="title">
+                                <input type="text" class="mail_text" placeholder="Category" name="country">
+                                <input type="text" class="mail_text" placeholder="Country" name="description">
+                               <button type="submit" class="save btn btn-primary">Save</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 	<!--footer section start -->
 	<div class="footer_section layout_padding margin_0">
 		<div class="container">
 			<div class="footer_main">
-				<div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Enter your email" aria-label="Recipient's username" aria-describedby="basic-addon2">
-                    <div class="input-group-append">
-                      <span class="input-group-text" id="basic-addon2">subscribe Now</span>
-                    </div>
-                </div>
-                <h1 class="year_text">2020</h1>
-                <h1 class="landing_text">Free Multipurpose Responsive  Landing Page </h1>
-			</div>
-			<div class="social_icon">
-				<ul>
-					<li><a href="#"><img src="images/fb-icon.png"></a></li>
-					<li><a href="#"><img src="images/twitter-icon.png"></a></li>
-					<li><a href="#"><img src="images/linkdin-icon.png"></a></li>
-					<li><a href="#"><img src="images/instagram-icon.png"></a></li>
-					<li><a href="#"><img src="images/youtub-icon.png"></a></li>
-				</ul>
+<!--				<div class="input-group mb-3">-->
+<!--                    <input type="text" class="form-control" placeholder="Enter your email" aria-label="Recipient's username" aria-describedby="basic-addon2">-->
+<!--                    <div class="input-group-append">-->
+<!--                      <span class="input-group-text" id="basic-addon2">subscribe Now</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+                <h1 class="year_text">2024</h1>
+                <h1 class="landing_text">Created by Camilla Kleymen</h1>
 			</div>
 		</div>
 	</div>
@@ -129,9 +143,6 @@
 	<div class="copyright_section">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-12">
-					<p class="copyright_text">2020 All Rights Reserved Design by <a href="https://html.design/"> Free Html Templates</p>
-				</div>
 			</div>
 		</div>
 	</div>
